--- a/interactive_engine/compiler/conf/ir.compiler.properties
+++ b/interactive_engine/compiler/conf/ir.compiler.properties
@@ -13,16 +13,19 @@ pegasus.hosts: localhost:1234
 # set timeout in milliseconds to connect to hiactor service
 # hiactor.timeout: 6000000
 
-# graph.schema
-graph.schema: ../executor/ir/core/resource/modern_schema.json
+# set schema access uri, two formats are supported:
+# 1. local file path: file://<absolute path to the local schema file>, i.e. file:///path/to/your/schema.json
+# 2. remote http path: http://<host>:<port>/<query>, i.e. http://localhost:8080/schema
+# we specifically support reading from a relative path if it is a local file.
+graph.meta.schema.uri: ../executor/ir/core/resource/modern_schema.json
 graph.store: exp
 
 graph.planner.is.on: true
 graph.planner.opt: RBO
 graph.planner.rules: FilterIntoJoinRule, FilterMatchRule, ExtendIntersectRule, ExpandGetVFusionRule
 
-# set file path of glogue input statistics
-# graph.statistics: src/test/resources/statistics/modern_statistics.json
+# set statistics access uri
+graph.meta.statistics.uri: src/test/resources/statistics/modern_statistics.json
 
 # set stored procedures directory path
 # graph.stored.procedures: <your stored procedures directory path>
@@ -62,14 +65,8 @@ calcite.default.charset: UTF-8
 # set the max capacity of the result streaming buffer for each query
 # per.query.stream.buffer.max.capacity: 256
 
-# set the mode to read ir meta, either from a 'local' file or via remote 'http'.
-# ir.meta.reader.mode: local
+# set the interval in milliseconds to fetch graph schema
+# graph.meta.schema.fetch.interval.ms: 1000
 
-# if ir.meta.reader.mode is 'http', set the remote ir meta service host
-# ir.meta.service.host: localhost:8080
-
-# if ir.meta.reader.mode is 'http', set the interval in milliseconds to fetch ir meta
-# ir.meta.fetch.interval.ms: 1000
-
-# if ir.meta.reader.mode is 'http', set the timeout in milliseconds to fetch ir graph statistics
-# ir.statistics.fetch.interval.ms: 86400000l
+# set the timeout in milliseconds to fetch graph statistics
+# graph.meta.statistics.fetch.interval.ms: 86400000l
