--- a/charts/gie-standalone/templates/frontend/statefulset.yaml
+++ b/charts/gie-standalone/templates/frontend/statefulset.yaml
@@ -117,8 +117,8 @@ spec:
               value: {{ .Values.extraConfig | quote }}
             - name: WORKER_NUM
               value: {{ .Values.pegasusWorkerNum | quote }}
-            - name: TIMEOUT
-              value: {{ .Values.pegasusTimeout | quote }}
+            - name: QUERY_TIMEOUT
+              value: {{ .Values.queryExecutionTimeoutMS | quote }}
             - name: BATCH_SIZE
               value: {{ .Values.pegasusBatchSize | quote }}
             - name: OUTPUT_CAPACITY
