--- a/interactive_engine/compiler/src/test/resources/config/gs_interactive_hiactor.yaml
+++ b/interactive_engine/compiler/src/test/resources/config/gs_interactive_hiactor.yaml
@@ -20,6 +20,10 @@ compiler:
     opt: RBO
     rules:
       - FilterMatchRule
+  meta:
+    reader:
+      schema:
+        uri: ./target/test-classes/config/modern/graph.yaml
   endpoint:
     default_listen_address: 0.0.0.0  # default localhost
     bolt_connector:   # for cypher, there may be other connectors, such as bolt_connector, https_connector
