--- a/interactive_engine/compiler/conf/ir.compiler.properties
+++ b/interactive_engine/compiler/conf/ir.compiler.properties
@@ -17,7 +17,7 @@ pegasus.hosts: localhost:1234
 # 1. local file path: file://<absolute path to the local schema file>, i.e. file:///path/to/your/schema.json
 # 2. remote http path: http://<host>:<port>/<query>, i.e. http://localhost:8080/schema
 # we specifically support reading from a relative path if it is a local file.
-graph.meta.schema.uri: ../executor/ir/core/resource/modern_schema.json
+graph.schema: ../executor/ir/core/resource/modern_schema.json
 graph.store: exp
 
 graph.planner.is.on: true
