--- a/interactive_engine/assembly/src/conf/groot/config.template
+++ b/interactive_engine/assembly/src/conf/groot/config.template
@@ -34,4 +34,4 @@ pegasus.worker.num=2
 pegasus.hosts=localhost:8080
 
 kafka.test.cluster.enable=true
-OTEL_SDK_DISABLED=true
+collect.statistics=false
