--- a/charts/graphscope-store/values.yaml
+++ b/charts/graphscope-store/values.yaml
@@ -489,12 +489,12 @@ zkBasePath: "/graphscope/groot"
 # gremlinServerPort: 12312
 
 ## GOpt config
-## To adopt a CBO planner, set graphPlannerOpt to CBO, set gremlinScriptLanguageName to antlr_gremlin_calcite, and set physicalOptConfig to proto.
+## To adopt a CBO planner, set graphPlannerOpt to CBO, set gremlinScriptLanguageName to antlr_gremlin_calcite, and set graphPhysicalOpt to proto.
 graphPlannerIsOn: true
 graphPlannerOpt: RBO
 graphPlannerRules: FilterIntoJoinRule, FilterMatchRule, ExtendIntersectRule, ExpandGetVFusionRule
 gremlinScriptLanguageName: antlr_gremlin_traversal
-physicalOptConfig: ffi
+graphPhysicalOpt: ffi
 queryExecutionTimeoutMs: 600000
 
 ## Key-value pair separated by ;
