add cron_job to backup and update create_graph_and_loading

--- a/charts/graphscope-interactive/values.yaml
+++ b/charts/graphscope-interactive/values.yaml
@@ -97,6 +97,21 @@ ingress:
   paths:
     - path: /
 
+cronjob:
+  enabled: true
+  schedule: "* * * * *"
+  image:
+    registry: reg.docker.alibaba-inc.com
+    repository: "7brs/busybox"
+    tag: "latest"
+    pullPolicy: IfNotPresent
+  command: |
+    echo "Current date: $(date +%Y-%m-%d)" > /tmp/current_date.sh
+    /bin/sh /tmp/current_date.sh
+  tolerations: []
+  podAnnotations: {}
+  podLabels: {}
+
 ## GraphScope Interactive parameters
 ##
 primary:
