--- a/.github/workflows/gaia.yml
+++ b/.github/workflows/gaia.yml
@@ -73,11 +73,6 @@ jobs:
       run: |
         cd ${GITHUB_WORKSPACE}/interactive_engine/compiler && make test
 
-    - name: Ir Runtime With Features Test
-      run: |
-        cd ${GITHUB_WORKSPACE}/interactive_engine/executor/ir/integrated
-        cargo test --features=mimalloc
-
     - name: CommonType Unit Test
       run: |
         cd ${GITHUB_WORKSPACE}/interactive_engine/executor/common/dyn_type && cargo test
@@ -88,6 +83,13 @@ jobs:
         cd ${GITHUB_WORKSPACE}/interactive_engine/executor/store/groot && cargo test
         # TODO: add ut in global_query
         # cd ${GITHUB_WORKSPACE}/interactive_engine/executor/store/global_query && cargo test
+
+    - name: Ir With Features Test
+      run: |
+        cd ${GITHUB_WORKSPACE}/interactive_engine/executor/ir/integrated
+        cargo test --features=mimalloc
+        cd ${GITHUB_WORKSPACE}/interactive_engine/executor/store/groot
+        cargo test --features=mimalloc
 
     - name: Ir Integration Test on Experimental Store
       run: |
