support multip prop

--- a/flex/interactive/examples/modern_graph/bulk_load.yaml
+++ b/flex/interactive/examples/modern_graph/bulk_load.yaml
@@ -89,3 +89,7 @@ edge_mappings:
           index: 2
           name: weight
         property: weight
+      - column:
+          index: 3
+          name: name
+        property: name
