--- a/analytical_engine/java/grape-giraph/pom.xml
+++ b/analytical_engine/java/grape-giraph/pom.xml
@@ -70,6 +70,10 @@
       <artifactId>giraph-core</artifactId>
       <version>1.3.0-hadoop2</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-client</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
