--- a/analytical_engine/java/pom.xml
+++ b/analytical_engine/java/pom.xml
@@ -101,6 +101,7 @@
     <javax.annotation.version>1.3.2</javax.annotation.version>
     <native-lib-loader.version>2.3.5</native-lib-loader.version>
     <gson.version>2.9.0</gson.version>
+    <hadoop.version>2.7.3</hadoop.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -272,6 +273,11 @@
           <artifactId>grpc-testing</artifactId>
           <version>${grpc.version}</version>
           <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.hadoop</groupId>
+        <artifactId>hadoop-client</artifactId>
+        <version>${hadoop.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
