--- a/analytical_engine/java/grape-runtime/pom.xml
+++ b/analytical_engine/java/grape-runtime/pom.xml
@@ -72,6 +72,10 @@
     <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-slf4j-impl</artifactId>
     </dependency>
+    <dependency> 
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+  </dependency>
   </dependencies>
   <build>
     <plugins>
@@ -132,11 +136,17 @@
                   <include>com.alibaba.graphscope:*</include>
                   <include>com.alibaba.fastffi:*</include>
                   <include>com.alibaba:fastjson</include>
-                  <include>org.slf4j:*</include>
+                  <include>org.slf4j:slf4j-api</include>
                   <include>org.apache.logging.log4j:*</include>
+                  <include>org.slf4j:slf4j-reload4j</include>
+                  <include>org.slf4j:slf4j-log4j12</include>
+                  <include>org.apache.log4j:*</include>
                   <include>org.ow2.asm:*</include>
                   <include>com.google.testing.compile:*</include>
+                  <include>log4j:log4j</include>
                 </includes>
+                <excludes>
+                </excludes>
               </artifactSet>
               <filters>
                 <filter>
