fix(interactive): Introduce 'mimalloc' as an alternative memory allocator in GIE Backend (#3946)
In GIE, if you want to use mimalloc as the default allocator, you can
build the backend with `cargo build --features mimalloc`.
---------
Co-authored-by: Longbin Lai <longbin.lailb@alibaba-inc.com>

--- a/.github/workflows/gaia.yml
+++ b/.github/workflows/gaia.yml
@@ -84,6 +84,13 @@ jobs:
         # TODO: add ut in global_query
         # cd ${GITHUB_WORKSPACE}/interactive_engine/executor/store/global_query && cargo test
 
+    - name: Ir With Features Test
+      run: |
+        cd ${GITHUB_WORKSPACE}/interactive_engine/executor/ir/integrated
+        cargo test --features=mimalloc
+        cd ${GITHUB_WORKSPACE}/interactive_engine/executor/store/groot
+        cargo test --features=mimalloc
+
     - name: Ir Integration Test on Experimental Store
       run: |
         . ${HOME}/.graphscope_env
