--- a/analytical_engine/CMakeLists.txt
+++ b/analytical_engine/CMakeLists.txt
@@ -427,7 +427,7 @@ if (BUILD_TESTS)
         cmake_parse_arguments(add_vineyard_app "${options}" "${oneValueArgs}" "${multiValueArgs}" ${ARGN})
         add_executable(${target} ${add_vineyard_app_SRCS} core/object/dynamic.cc)
         target_include_directories(${target} PRIVATE ${LIBGRAPELITE_INCLUDE_DIRS}/grape/analytical_apps)
-        target_link_libraries(${target} gs_proto ${LIBGRAPELITE_LIBRARIES} ${VINEYARD_LIBRARIES})
+        target_link_libraries(${target} gs_proto applications ${LIBGRAPELITE_LIBRARIES} ${VINEYARD_LIBRARIES})
         if (${LIBUNWIND_FOUND})
             target_link_libraries(${target} ${LIBUNWIND_LIBRARIES})
         endif ()
