--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "learning_engine/graph-learn"]
 	path = learning_engine/graph-learn
-	url = https://github.com/LiSu/graph-learn.git
+	url = https://github.com/alibaba/graph-learn.git
 
 [submodule "flex/grin"]
 	path = flex/grin
@@ -8,7 +8,7 @@
 
 [submodule "learning_engine/graphlearn-for-pytorch"]
 	path = learning_engine/graphlearn-for-pytorch
-	url = https://github.com/LiSu/graphlearn-for-pytorch.git
+	url = https://github.com/alibaba/graphlearn-for-pytorch.git
 
 [submodule "flex/third_party/nlohmann-json"]
 	path = flex/third_party/nlohmann-json
